Lang rework 24 Minigames compiles! Merry Christmas Therefore this includes fixes for missed errors since testing is on the table